--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Helvetica Neue', Arial, sans-serif;
     background-color: #141414; 
@@ -11,7 +12,7 @@ header {
     color: #fff;
     padding: 20px;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .curved-title {
@@ -20,8 +21,8 @@ header {
     position: relative;
     display: inline-block;
     white-space: nowrap;
-    color: #e50914; /* changed to red */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.75); 
+    color: #e50914;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.75);
 }
 
 .curved-title:before,
@@ -52,14 +53,14 @@ main {
     padding: 20px;
     max-width: 960px;
     margin: 20px auto;
-    background: #181818; 
+    background: #181818;
     border-radius: 10px;
 }
 
 .chart {
     width: 100%;
     height: 400px;
-    background: #222; 
+    background: #222;
     margin: 20px 0;
     display: flex;
     align-items: center;
@@ -75,10 +76,25 @@ footer {
     padding: 10px 0;
     background: #181818;
     color: #ccc;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     border-radius: 0;
 }
 
 footer p {
     margin: 0;
+}
+
+#swapViewButton {
+    padding: 8px 16px;
+    background-color: #e50914;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#swapViewButton:hover {
+    background-color: #f73d1f;
 }
